# bbb-led-dongle

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  fw_nrf52840.sh  prj.conf  protocol.drawio
doc/: protocol.md
doc/prototyping/: serialisation.md
scripts/: .aliases.sh  build-env  flash_nrf52840  test-module
src/: b64.c  b64.h  commands.c  commands.h  main.c  protocol.c  protocol.h  serialise.c  serialise.h  timer.c  timer.h
test/: CMakeLists.txt  test_b64.c
test/protocol/: CMakeLists.txt  prj.conf  test_protocol.c
test/serialise/: CMakeLists.txt  prj.conf  test_serialise.c
test/timer/: CMakeLists.txt  prj.conf  test_timer.c
test/ztest_sample/: CMakeLists.txt  prj.conf  test_sample.c
